--- a/css/estilos.css
+++ b/css/estilos.css
@@ -177,6 +177,7 @@ footer{
     column-gap: 30px;
     row-gap: 30px;
     font-size: 18px;
+    color: black;
 }
 .cont-footer div h4 {
     font-size: 23px;
