--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -1,5 +1,5 @@
 //Variables 
 /*color principal body */
-$color-principal:#f6be6a;
+$color-principal:white;
 /*color del nav */  
     $color-nav:#2B2B2B;
