--- a/scss/paginas/_pedidos.scss
+++ b/scss/paginas/_pedidos.scss
@@ -1,6 +1,20 @@
-body{
-    background-color: white;
+//import 
+@import "../variables/variables";
+
+//estilos generales 
+h2, p, h3 {
+    color: $color-nav;
 }
+h2{
+   
+        font-size: 60px;
+        font-family: "DM Serif Display", serif;
+        font-weight: 400;
+        text-shadow: 1px 10px 10px $color-nav;
+}
+
+//estilos 
+
 .caja-titulo {
     background-color: #7fba9f;
     height: 300px;
@@ -31,29 +45,31 @@ body{
 .main-pedidos{
     display: flex;
     flex-direction: column;
+    row-gap: 40px;
     text-align: center;
+    margin: 80px 10px;
+        h2{
+            font-size: 30px;
+        }
     .cajas-pedidos{
         display: flex;
         justify-content: center;
-        column-gap: 20px;
+        flex-direction: column;
+        row-gap: 30px;
         align-items: center;
+        margin: 0px 0px;
         text-align: center;
+        width: 100%;
         font-size: 20px;
         color: #fdfd96;
-            .contenedor-tarrina{
-                position: relative;
-                }
-            div{
-                width: 100%;
-            }
             .tarrinas-img{
                 background-image: url(../../imagenes/pedidos/Tarrinas\ \(1\).jpg);
                 object-fit: cover;
+                width: 100%;
                 height: 60vh;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                margin: 30px;
                 background-size: cover;
                 background-position: 50%;
                 position: relative;
@@ -71,11 +87,11 @@ body{
         .copas-img{
             background-image: url(../../imagenes/pedidos/Copa-al-gusto.jpg);
             object-fit: cover;
+            width: 100%;
             height: 60vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 30px;
             background-size: cover;
             background-position: 50%;
         }
@@ -87,49 +103,72 @@ body{
             /*BATIDOS Y SMOOTIES */
 
 .contenedor-batidos{
-    margin: 50px 50px;
+    margin: 100px 50px;
     display: flex;
     flex-direction: column;
+    row-gap: 40px;
     text-align: center;
         div{
             h2{
-                font-size: 50px;
+                font-size: 40px;
             }
         }
-}
-.batidos-smooties{
+    .batidos-smooties{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(2,1fr);
-    column-gap: 0px;
+    grid-template-columns: repeat(1,1fr);
+    grid-template-rows: repeat(7,1fr);
+    column-gap: 20px;
     row-gap: 40px;
     text-align: start;
         .batido-item{
-            width:90%;
+            width:100%;
             display: flex;
             flex-direction: column;
             div{
+                margin: 10px 0px ;
                 a{
                     img{
                         width: 100%;
                     }
                 }
             }
+            div{
+                p{
+                    margin: 5px;
+                    font-size: 23px;
+                    color: $color-nav;
+                }
+                .estilo-precio{
+                    color: lightgreen;
+                    font-size: 20px;
+                }
+            }
         }
 
 }
+}
+
 .tartas-postres{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(5,1fr);
+    grid-template-columns: repeat(1,1fr);
+    grid-template-rows: repeat(18,1fr);
+    row-gap: 30px;
+    column-gap: 20px;
         .postre-item{
             width: 100%;
             div{
                 h3{
-                    font-size: 25px;
+                    font-size: 20px;
+                    margin: 10px 0px;
+                }
+                p{
+                    margin: 10px 0px;
+                    color: lightgreen;
+                    font-size: 20px;
                 }
                 img{
-                    width: 80%;
+                    width: 100%;
+                    border-radius: 170px;
                 }
             }
         }
@@ -152,4 +191,101 @@ body{
 }
 
 
+/*FOTER*/
 
+footer{
+    .cont-footer{
+        flex-direction: column;
+        padding-bottom: 40px;
+        font-size: 20px;
+        color: white;
+        .foot-info {
+             ul{
+                li{
+                    a  {
+                    color: white;
+                    }   
+                } 
+             } 
+        }
+        
+ }
+}
+
+@media screen and (min-width: 600px){
+    
+  header{
+    nav{
+        .nav-img{
+            img{
+                width: 30%;
+            }
+        }
+        .ul-nav{
+            width: 100%;
+            ul{
+                width: 100%;
+            }
+        }
+    }
+  }
+    .cajas-pedidos{
+        flex-direction: row !important;
+        column-gap: 10px;
+        padding: 0px 10px !important;
+    }
+
+    /*BATIDOS SMOOTIES*/
+
+    .contenedor-batidos{
+        margin: 10px !important;
+        .batidos-smooties{
+            grid-template-columns: repeat(3, 1fr) !important;
+            grid-template-rows: repeat(3,1fr) !important;
+        }
+        
+    }
+
+    /*TARTAS Y POSTRES*/
+
+    .tartas-postres{
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(6,1fr);
+            .postre-item{
+                width: 90%;
+            }
+    }
+
+}
+
+@media screen and (min-width: 1024px){
+   //pedidos 
+ .main-pedidos{
+    h2{
+        font-size: 50px;
+        color: $color-nav;
+    }
+ }
+ //batidos
+.contenedor-batidos{
+    margin: 200px !important;
+
+        div{
+            h2{
+                font-size: 50px;
+                margin-bottom: 70px;
+            }
+        }
+    .batidos-smooties{
+        grid-template-columns: repeat(4,1fr) !important;
+        grid-template-rows: repeat(2,1fr) !important;
+            
+     }
+}
+//tartas y postres 
+.tartas-postres{
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(5,1fr);
+}
+
+}
