--- a/scss/paginas/_contacto.scss
+++ b/scss/paginas/_contacto.scss
@@ -12,6 +12,7 @@
     gap: 50px;
     width: 100%;
     margin: auto;
+    margin-bottom: 100px;
     padding: 50px;
         .info-contacto{
             width: 70%;
