--- a/scss/paginas/_pedidos.scss
+++ b/scss/paginas/_pedidos.scss
@@ -63,7 +63,7 @@ h2{
         font-size: 20px;
         color: #fdfd96;
             .tarrinas-img{
-                background-image: url(../../imagenes/pedidos/Tarrinas\ \(1\).jpg);
+                background-image: url(../../imagenes/pedidos/tarrinas.jpg);
                 object-fit: cover;
                 width: 100%;
                 height: 60vh;
