--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -3,3 +3,9 @@
 $color-principal:white;
 /*color del nav */  
     $color-nav:#2B2B2B;
+
+/*color fonto crema index*/ 
+$color-fondo-index: #f6be6a;
+
+/*color pedidos precio y fondo*/
+$color-precio:#7fba9f;
