--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -107,12 +107,14 @@ header{
             width: 100%;
             margin: auto;
                 button {
-                    background-color: none;
-                    width: 300px;
-                    padding: 5px;
+                    background-color: $color-fondo-index;
+                    @include botones;
                         a{
                             color: $color-nav;
                             text-decoration: none;
+                        }
+                        a:hover{
+                            text-decoration: underline;
                         }
                 }
         }
@@ -159,12 +161,33 @@ header{
     object-fit: cover;
         .box-carta{
             display: flex;
-            color: #f6be6a;
+            color: $color-fondo-index;
             width: 90%;
             gap: 30px;
             padding: 30px 10px;
                 .conteiner-text{
-
+                    h3{
+                        color: $color-fondo-index;
+                    }
+                    h2{
+                        color: $color-principal !important;
+                        font-size: 30px;
+                        margin-bottom: 20px;
+                    }
+                    p{
+                        color: $color-principal;
+                    }
+                    button{
+                        background-color: $color-nav;
+                        @include botones;
+                            a{
+                                color: $color-principal;
+                                @include enlace ;
+                            }
+                            a:hover {
+                                text-decoration: underline;
+                            }
+                    }
                 }
         }
         .imagenes-local{
@@ -194,12 +217,21 @@ header{
     font-size: 20px;
     gap: 50px;
     padding: 20px 0px;
+    background-color: $color-fondo-index;
         #contenido-info{
             display: flex;
             gap: 15px;
             align-items: center;
             margin: 30px;
             padding: 0px 5px;
+                h3{
+                    margin-bottom: 0px;
+                    text-align: start;
+                }
+                h2{
+                    margin-top: 0px;
+                    font-size: 40px;
+                }
         }
         .items-box{
             display: flex;
@@ -209,6 +241,7 @@ header{
             row-gap: 2rem;
                     .items-info{
                         width: 70%;
+                        margin: 30px 0px;
                             h3{
                                 margin: 30px 0px;
                             }
@@ -233,6 +266,7 @@ header{
 footer{
     background-color: #2B2B2B;
     width: 100%;
+    line-height: 30px;
         .separator-footer{
             width: 100%;
             padding: 10px 0px;
@@ -252,9 +286,10 @@ footer{
             row-gap: 30px;
             font-size: 18px;
             color: $color-principal;
-                div{
+                .foot-info{
+                    margin-top: 60px;
                     h4{
-                        font-size: 25px;
+                        font-size: 23px;
                         margin-bottom: 10px;
                         text-align: center;
                         margin-bottom: 20px;
@@ -264,8 +299,8 @@ footer{
                         li{
                             list-style: none;
                             margin-bottom: 5px;
-                            text-align: center;
-                            font-size: 1rem;
+                            text-align: start;
+                            font-size: 15px;
                         }
                     }
                 }
@@ -338,7 +373,7 @@ footer{
                 .conteiner-text{
                     height: 100%;
                         h3{
-                            color: #f6be6a;
+                            color: $color-fondo-index;
                         }
                         h2, p{
                             color: $color-principal ;
@@ -355,11 +390,9 @@ footer{
   .conteiner-grid{
     align-items: flex-start;
         .items-box{
-            display: grid;
-            grid-template-columns: repeat(3,1fr);
-            grid-template-rows: repeat(2,1fr);
             justify-content: center;
             margin-left: 10%;
+
         }
   }
  
@@ -399,10 +432,11 @@ footer{
     }
     /*Main*/
     #box-start{
-        width: 90%;
+        width: 100%;
         justify-content: center;
-        margin: 70px !important;
         padding: 100px;
+        margin: 0px !important;
+        background-color: $color-fondo-index;
             .textos-main{
                 width: 40%;
             }
@@ -430,25 +464,44 @@ footer{
             }
     }
     /*Fondo madera */
-    .box-carta{
-        padding: 200px 0px 0px 40px;
-        font-size: 20px;
-        div{
-            h2{
-                font-size: 50px;
-            }
-            h3{
-                width: 100%;
+    .fondo-madera{
+        padding: 20px 70px;
+        .box-carta{
+            padding: 70px 0px 0px 40px;
+            font-size: 20px;
+            div{
+                h2{
+                    font-size: 50px;
+                }
+                h3{
+                    width: 100%;
+                }
             }
         }
     }
    
-    .imagenes-local{
+    .imagenes-local{    
         width: 60%;
         padding: 50px 0px 50px 30px ;
     }
    .sello-capo{
     margin: -200px 0px 0px -500px ;
+   }
+
+   //items 
+   #contenido-info{
+        width: 90%;
+        .img-experiencia{
+            width: 15%;
+                img{
+                    width: 70%;
+                }
+           }
+   }
+   .items-box{
+        display: grid !important;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(2,1fr);
    }
    /*Footer*/
    .cont-footer{
