--- a/scss/paginas/_pedidos.scss
+++ b/scss/paginas/_pedidos.scss
@@ -66,13 +66,12 @@ h2{
         margin: 0px 0px;
         text-align: center;
         width: 100%;
-            .tarrinas-img{
+            .tarrinas-img, .copas-img{
                     width: 100%;
+                    object-fit: cover;
+                    height: 70vh;
             }
      
-            .copas-img{
-                width: 100%;
-            }
             img{
                 width: 100%;
                 height: 60vh;
@@ -222,6 +221,16 @@ footer{
         flex-direction: row !important;
         column-gap: 10px;
         padding: 0px 10px !important;
+            .tarrinas-img{
+                    img{
+                        object-fit: cover;
+                    }
+            }
+            .copas-img{
+                    img{
+                        object-fit: cover;
+                    }
+            }
     }
 
     /*BATIDOS SMOOTIES*/
